--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,21 @@
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
+  min-width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  font-size: calc(10px + 2vmin);
+  padding: 20px;
+  color: white;
+  position: fixed;
+  left: 0;
+}
+
+.App-body {
+  background-color: gray;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
